--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/mapbox-gl": "^3.1.0",
+    "axios": "^1.6.7",
+    "compose-function": "^3.0.3",
     "expo": "~50.0.13",
+    "expo-camera": "^14.0.6",
+    "expo-media-library": "^15.9.1",
+    "expo-router": "^3.4.8",
     "expo-status-bar": "~1.11.1",
+    "jwt-decode": "^4.0.0",
+    "mapbox-gl": "^3.2.0",
     "react": "18.2.0",
-    "react-native": "0.73.5"
+    "react-hook-form": "^7.51.0",
+    "react-native": "0.73.5",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
