--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "e-furniture-shipper-mobile",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -12,6 +12,7 @@
     "@types/mapbox-gl": "^3.1.0",
     "axios": "^1.6.7",
     "compose-function": "^3.0.3",
+    "@tanstack/react-query": "^4.35.3",
     "expo": "~50.0.13",
     "expo-camera": "^14.0.6",
     "expo-media-library": "^15.9.1",
