--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.35.3",
     "@types/mapbox-gl": "^3.1.0",
     "axios": "^1.6.7",
     "compose-function": "^3.0.3",
-    "@tanstack/react-query": "^4.35.3",
     "expo": "~50.0.13",
     "expo-camera": "^14.0.6",
     "expo-media-library": "^15.9.1",
@@ -20,13 +20,15 @@
     "expo-status-bar": "~1.11.1",
     "jwt-decode": "^4.0.0",
     "mapbox-gl": "^3.2.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.51.0",
     "react-native": "0.73.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
