--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "18.2.0",
     "react-hook-form": "^7.51.0",
     "react-native": "0.73.5",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "lottie-react-native": "6.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
