--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^4.35.3",
     "@types/mapbox-gl": "^3.1.0",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "compose-function": "^3.0.3",
     "expo": "~50.0.13",
     "expo-camera": "^14.0.6",
@@ -19,13 +20,14 @@
     "expo-router": "^3.4.8",
     "expo-status-bar": "~1.11.1",
     "jwt-decode": "^4.0.0",
+    "lottie-react-native": "6.5.1",
     "mapbox-gl": "^3.2.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.51.0",
     "react-native": "0.73.5",
-    "zustand": "^4.5.2",
-    "lottie-react-native": "6.5.1"
+    "react-native-svg": "^15.1.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
