--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@tanstack/react-query": "^4.35.3",
     "@types/mapbox-gl": "^3.1.0",
     "axios": "^1.6.7",
-    "dayjs": "^1.11.10",
     "compose-function": "^3.0.3",
+    "dayjs": "^1.11.10",
     "expo": "~50.0.13",
     "expo-camera": "^14.0.6",
     "expo-media-library": "^15.9.1",
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.51.0",
     "react-native": "0.73.5",
+    "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^15.1.0",
     "zustand": "^4.5.2"
   },
