--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react": "18.2.0",
     "react-hook-form": "^7.51.0",
     "react-native": "0.73.5",
+    "react-native-maps": "^1.11.3",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^15.1.0",
     "zustand": "^4.5.2"
