--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "@tanstack/react-query": "^4.35.3",
-    "@types/mapbox-gl": "^3.1.0",
     "axios": "^1.6.7",
     "compose-function": "^3.0.3",
     "dayjs": "^1.11.10",
