--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.10",
     "expo": "~50.0.13",
     "expo-camera": "^14.0.6",
+    "expo-location": "^16.5.5",
     "expo-media-library": "^15.9.1",
     "expo-router": "^3.4.8",
     "expo-status-bar": "~1.11.1",
