--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-native-check-box": "^2.1.7",
     "react-native": "0.73.5",
     "react-native-maps": "^1.11.3",
     "react-native-maps-directions": "^1.9.0",
