--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.1",
+    "@gorhom/portal": "^1.0.14",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-gesture-handler": "~2.14.0",
     "@react-native-async-storage/async-storage": "^1.22.3",
     "@tanstack/react-query": "^4.35.3",
     "axios": "^1.6.7",
@@ -27,8 +31,8 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.51.0",
-    "react-native-check-box": "^2.1.7",
     "react-native": "0.73.5",
+    "react-native-check-box": "^2.1.7",
     "react-native-maps": "^1.11.3",
     "react-native-maps-directions": "^1.9.0",
     "react-native-step-indicator": "^1.0.3",
