--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.1",
     "@gorhom/portal": "^1.0.14",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-gesture-handler": "~2.14.0",
     "@react-native-async-storage/async-storage": "^1.22.3",
     "@tanstack/react-query": "^4.35.3",
+    "@vietmap/vietmap-gl-react-native": "^0.0.6",
+    "@types/geojson": "^7946.0.14",
+    "react-native-elements": "3.4.3",
+    "react-native-select-dropdown": "3.4.0",
+    "react-native-vector-icons": "^10.0.3",
     "axios": "^1.6.7",
     "base-64": "^1.0.0",
     "compose-function": "^3.0.3",
@@ -27,14 +30,15 @@
     "expo-status-bar": "~1.11.1",
     "jwt-decode": "^4.0.0",
     "lottie-react-native": "6.5.1",
-    "mapbox-gl": "^3.2.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.51.0",
     "react-native": "0.73.5",
     "react-native-check-box": "^2.1.7",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "^1.11.3",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^15.1.0",
     "socket.io-client": "^4.7.5",
