--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "^1.11.3",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^15.1.0",
