--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "base-64": "^1.0.0",
     "compose-function": "^3.0.3",
     "dayjs": "^1.11.10",
+    "react-native-flash-message": "^0.4.2",
     "expo": "~50.0.13",
     "expo-camera": "^14.1.2",
     "expo-location": "^16.5.5",
