--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^1.22.3",
     "@tanstack/react-query": "^4.35.3",
     "axios": "^1.6.7",
+    "expo-linking": "~6.2.2",
     "base-64": "^1.0.0",
     "compose-function": "^3.0.3",
     "dayjs": "^1.11.10",
